Fixed mobile spacing issue with buttons.

--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -1,7 +1,7 @@
 /*! ----------
 Style sheet for ibuildweb.site
 Author: Orlando Morales
-Last Date Modified: 11/14/2017
+Last Date Modified: 11/19/2017
 ------------- */
 @import "src/vendor/bootstrap-3.3.7/font-awesome/css/font-awesome.min.css";
 @import "src/vendor/bootstrap-3.3.7/css/bootstrap.min.css";
@@ -15,6 +15,9 @@ Sections
 /*----- End Fonts -----*/
 
 /*----- Start Global Styles -----*/
+	.btn {
+		margin-bottom: 10px;
+	}
 	figure {
 		margin-bottom: 20px;
 	}
